<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/app_bar_about_app"
    android:background="#999900"
    tools:context=".AboutAppActivity">

    <RelativeLayout
        android:layout_width="500dp"
        android:layout_height="40dp"
        android:id="@+id/name_about_app"
        android:background="#009900"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/line"
            android:src="@drawable/line2"
            android:id="@+id/line2_about_app"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/line"
            android:src="@drawable/line3"
            android:id="@+id/line3_about_app"
            android:layout_below="@+id/line2_about_app"
            android:layout_alignParentLeft="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_below="@+id/line2_about_app"
            android:layout_toRightOf="@+id/line3_about_app"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="21sp"
            android:id="@+id/text_about_app"
            android:layout_alignParentRight="true"
            android:text="@string/about_app"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/line"
            android:src="@drawable/line3"
            android:id="@+id/line3_2_about_app"
            android:layout_below="@+id/line2_about_app"
            android:layout_alignParentRight="true"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/line"
            android:src="@drawable/line2"
            android:id="@+id/line5_about_app"
            android:layout_alignParentBottom="true"
            />

    </RelativeLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_about_app"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/icon_image"
                android:id="@+id/logo_app"
                android:src="@drawable/logo"
                android:layout_margin="10dp"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:layout_centerHorizontal="true"
                android:textColor="#000"
                android:textSize="15sp"
                android:layout_below="@+id/logo_app"
                android:id="@+id/version"
                android:layout_marginBottom="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/me"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:textColor="#000"
                android:textSize="15sp"
                android:layout_below="@+id/version"
                android:layout_marginBottom="10dp"
                android:id="@+id/me"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:textColor="#000"
                android:textSize="15sp"
                android:layout_below="@+id/me"
                android:layout_marginBottom="3dp"
                android:id="@+id/project"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:textColor="#000"
                android:textSize="15sp"
                android:layout_below="@+id/project"
                android:layout_marginBottom="10dp"
                android:id="@+id/date"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:textColor="#000"
                android:textSize="15sp"
                android:layout_below="@+id/date"
                android:layout_marginBottom="10dp"
                android:id="@+id/contact"
                />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/email_icon"
                android:id="@+id/email"
                android:src="@drawable/email"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/contact"
                android:onClick="writeMail"
                android:background="#fff"
                />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>