<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/app_bar_predictor"
    android:background="#999900"
    tools:context=".PredictorActivity">

    <RelativeLayout
        android:layout_width="500dp"
        android:layout_height="40dp"
        android:id="@+id/name_predictor"
        android:background="#009900"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/line"
            android:src="@drawable/line2"
            android:id="@+id/line2_predictor"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/line"
            android:src="@drawable/line3"
            android:id="@+id/line3_predictor"
            android:layout_below="@+id/line2_predictor"
            android:layout_alignParentLeft="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_below="@+id/line2_predictor"
            android:layout_toRightOf="@+id/line3_predictor"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="21sp"
            android:id="@+id/text_predictor"
            android:layout_alignParentRight="true"
            android:text="@string/predictors"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/line"
            android:src="@drawable/line3"
            android:id="@+id/line3_2_predictor"
            android:layout_below="@+id/line2_predictor"
            android:layout_alignParentRight="true"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/line"
            android:src="@drawable/line2"
            android:id="@+id/line5_predictor"
            android:layout_alignParentBottom="true"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_predictor"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/choose_predictors"
            >

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_predictor"
                android:layout_centerHorizontal="true"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/predictor"
                android:id="@+id/predictor_photo"
                android:background="@drawable/bulion"
                android:layout_below="@+id/spinner_predictor"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/choose_predictors"
            android:id="@+id/glass_layout"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/glass_name"
                android:textSize="25sp"
                android:text="@string/glass"
                android:textColor="#000"
                android:padding="10dp"
                />

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/glass_measure"
                android:textSize="25sp"
                android:text="@string/g250"
                android:textColor="#000"
                android:padding="10dp"
                android:layout_toRightOf="@+id/glass_name"
                android:gravity="right"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spoon_name"
                android:textSize="25sp"
                android:text="@string/spoon"
                android:textColor="#000"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="50dp"
                android:layout_below="@+id/glass_name"
                />

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/glass_measure"
                android:id="@+id/spoon_measure"
                android:textSize="25sp"
                android:text="@string/g15"
                android:textColor="#000"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_toRightOf="@+id/spoon_name"
                android:gravity="right"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/small_spoon_name"
                android:textSize="25sp"
                android:text="@string/spoon_small"
                android:textColor="#000"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_below="@+id/spoon_name"
                />

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spoon_measure"
                android:id="@+id/small_spoon_measure"
                android:textSize="25sp"
                android:text="@string/g5"
                android:textColor="#000"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_toRightOf="@+id/small_spoon_name"
                android:gravity="right"
                />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>