<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/app_bar_main"
    android:background="#999900"
    tools:context=".MainActivity">

        <EditText
            android:hint="@string/set_food"
            android:layout_width="200dp"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:id="@+id/search_text"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="5dp"
            />

        <ImageButton
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/search_icon"
            android:src="@drawable/search"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/search_text"
            android:id="@+id/search_button"
            android:onClick="search"
            android:background="#fff"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/line"
            android:layout_below="@+id/search_text"
            android:src="@drawable/line"
            android:id="@+id/line1"
            />

        <RelativeLayout
            android:layout_width="500dp"
            android:layout_height="40dp"
            android:id="@+id/parent_name"
            android:background="#009900"
            android:layout_below="@+id/line1"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/line"
                android:src="@drawable/line2"
                android:id="@+id/line2"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/line"
                android:src="@drawable/line3"
                android:id="@+id/line3"
                android:layout_below="@+id/line2"
                android:layout_alignParentLeft="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chef"
                android:textColor="#000000"
                android:layout_below="@+id/line2"
                android:layout_toRightOf="@+id/line3"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textSize="21sp"
                android:id="@+id/parent_text"
                android:layout_alignParentRight="true"
                />

            <ImageButton
                android:layout_marginTop="4dp"
                android:layout_marginLeft="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/back"
                android:layout_toRightOf="@+id/line3"
                android:src="@drawable/back"
                android:visibility="invisible"
                android:id="@+id/back_button"
                android:onClick="back1level"
                android:background="#fff"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/line"
                android:src="@drawable/line3"
                android:id="@+id/line3_2"
                android:layout_below="@+id/line2"
                android:layout_alignParentRight="true"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/line"
                android:src="@drawable/line2"
                android:id="@+id/line5"
                android:layout_alignParentBottom="true"
                />

        </RelativeLayout>

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/parent_name"
            android:id="@+id/list"
            />

</RelativeLayout>
