<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/app_bar_ingredients"
    android:background="#999900"
    tools:context=".IngredientsActivity">

    <RelativeLayout
        android:layout_width="500dp"
        android:layout_height="40dp"
        android:id="@+id/dish_name_ingredients"
        android:background="#009900"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/line"
            android:src="@drawable/line2"
            android:id="@+id/line2_ingredients"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/line"
            android:src="@drawable/line3"
            android:id="@+id/line3_ingredients"
            android:layout_below="@+id/line2_ingredients"
            android:layout_alignParentLeft="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_below="@+id/line2_ingredients"
            android:layout_toRightOf="@+id/line3_ingredients"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="14sp"
            android:id="@+id/text_ingredients"
            android:layout_alignParentRight="true"
            android:layout_marginTop="6dp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/line"
            android:src="@drawable/line3"
            android:id="@+id/line3_2_ingredients"
            android:layout_below="@+id/line2_ingredients"
            android:layout_alignParentRight="true"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/line"
            android:src="@drawable/line2"
            android:id="@+id/line5_ingredients"
            android:layout_alignParentBottom="true"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/notepad"
        android:layout_below="@+id/dish_name_ingredients"
        android:id="@+id/notepad"
        >

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:id="@+id/list_ingredients"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="500dp"
        android:layout_height="100dp"
        android:layout_below="@+id/notepad"
        android:id="@+id/ingredients_dots"
        android:background="@color/orange">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/two_steps"
            >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dot_ingredients"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:onClick="changeContent"
                android:contentDescription="@string/dot"
                android:text="@string/ingredients"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dot_substitutes"
                android:layout_marginLeft="100dp"
                android:layout_toRightOf="@+id/dot_ingredients"
                android:onClick="changeContent"
                android:contentDescription="@string/dot"
                android:text="@string/substituties"
                android:layout_marginTop="5dp"
                />

        </RelativeLayout>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dot_cost"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="5dp"
            android:onClick="changeContent"
            android:contentDescription="@string/dot"
            android:text="@string/cost"
            android:layout_below="@+id/two_steps"
            />

    </RelativeLayout>

</RelativeLayout>